# fastapi_ecommerse

./: .gitignore  pyproject.toml
app/: auth.py  database.py  db_depends.py  main.py  schemas.py
app/migrations/versions/: 0a60459db8f9_initial_migration_for_postgresql.py  3b774c8de0bb_add_review_module_attempt_3.py  3e5698f56916_add_russian_language_to_fts.py  5c28c56c55f7_create_seacrh_vector.py  5ee312f2459e_add_review_module_attempt_2.py  61f87dd62869_create_cart_fix_1.py  6b33a6b5646b_add_user_model.py  7a966dd0025b_categoroy_model_fix.py  83c33f52e440_add_models_to_orders.py  9b480a43d97f_category_model_fix.py  b65274596676_add_review_module_attempt_4.py  c6663b14b863_add_reviews_table.py  c867b9c1b1d3_create_cart.py  c98ad4821b07_add_parent_id_attribute_to_category_.py  ca46162746df_add_parent_id_attribute_to_category_.py  d0ea1b02f6f6_orders_models_fix_1.py  f116a3698502_create_seacrh_vector.py  ff057f8ab103_add_review_module.py
app/models/: __init__.py  categories.py  orders.py  products.py  reviews.py  users.py
app/routers/: cart.py  categories.py  orders.py  products.py  reviews.py  users.py
